--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,17 @@
-numpy==1.24.1
+contourpy==1.0.7
+cycler==0.11.0
+fire==0.5.0
+fonttools==4.38.0
+importlib-metadata==6.0.0
+kiwisolver==1.4.4
+llvmlite==0.39.1
+matplotlib==3.6.3
+numba==0.56.4
+numpy==1.23.5
+packaging==23.0
+Pillow==9.4.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+six==1.16.0
+termcolor==2.2.0
+zipp==3.13.0
