--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+black==23.1.0
+click==8.1.3
 contourpy==1.0.7
 cycler==0.11.0
 fire==0.5.0
@@ -5,13 +7,23 @@ fonttools==4.38.0
 importlib-metadata==6.0.0
 kiwisolver==1.4.4
 llvmlite==0.39.1
+markdown-it-py==2.1.0
 matplotlib==3.6.3
+mdurl==0.1.2
+mypy-extensions==1.0.0
 numba==0.56.4
 numpy==1.23.5
 packaging==23.0
+pathspec==0.11.0
 Pillow==9.4.0
+platformdirs==3.0.0
+Pygments==2.14.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+rich==13.3.1
+-e git+ssh://git@github.com/peterbbryan/simplified-sar-sim.git@4957bef15f8e7e529ad47ec0bd7c8238dc875a32#egg=simplified_sar_sim
 six==1.16.0
 termcolor==2.2.0
+tomli==2.0.1
+typing_extensions==4.5.0
 zipp==3.13.0
